Jacoco code coverage added